# cyberdynedao

./: .coverage  .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  svelte.config.js  tailwind.config.js  test-nft-integration.md  vite.config.ts
backend/: .dockerignore  .gitignore  .importlinter  Dockerfile  Justfile  README.md  alembic.ini  compose.dev.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605260001_phase1_baseline_content.py  202605270001_phase2_content_and_leads.py  202605270002_phase3_blog.py  202605270003_phase4_learning.py  202605270004_phase6_marketplace_chat.py  202605270005_phase7_courses.py  202605270006_phase8_quizzes.py  202605270006_phase8_uploads.py  202605270007_phase9_enrollment_deadline.py  202605270008_phase10_lesson_progress.py  202605270009_phase11_course_deadline.py  202605270010_phase12_course_certificates.py  202606120011_phase13_academy_translations.py  202606120012_phase14_widen_translation_titles.py  202606140013_phase15_translation_jobs.py  202606150014_phase16_course_categories.py  202606160015_phase17_category_parents.py  202606170016_phase18_bookmarks.py  202606170017_phase18_activity_events.py  202606170018_phase18_user_achievements.py  202606170019_phase18_concepts.py  202606170020_phase19_notebook_notes.py  202606170021_phase19_notebook_flashcards.py  202606170022_phase19_notebook_review.py  202606170023_phase19_notebook_ai_summary.py  202606170024_phase20_lesson_notes.py  202606170025_module_course_slugs.py  202606170026_learning_translations.py  202606260027_learner_feedback.py  202606260028_course_demand_registry.py  202606260029_usage_counters.py  202606260030_chat_message_attachments.py
backend/src/cyberdyne_backend/: __init__.py  main.py
backend/src/cyberdyne_backend/application/academy/: __init__.py  jobs.py  translation.py  use_cases.py
backend/src/cyberdyne_backend/application/access/: __init__.py  use_cases.py
backend/src/cyberdyne_backend/application/achievements/: __init__.py  use_cases.py
backend/src/cyberdyne_backend/application/activity/: __init__.py  use_cases.py
backend/src/cyberdyne_backend/application/agent_chat/: __init__.py  tools.py  use_cases.py
backend/src/cyberdyne_backend/application/ai_chat/: __init__.py  source_tools.py  tools.py  use_cases.py
backend/src/cyberdyne_backend/application/analytics/: __init__.py  use_cases.py
backend/src/cyberdyne_backend/application/blog/: __init__.py  use_cases.py
backend/src/cyberdyne_backend/application/bookmarks/: __init__.py  use_cases.py
backend/src/cyberdyne_backend/application/code/: __init__.py  use_cases.py
backend/src/cyberdyne_backend/application/concepts/: __init__.py  use_cases.py
backend/src/cyberdyne_backend/application/content/: __init__.py  use_cases.py
backend/src/cyberdyne_backend/application/course_demand/: __init__.py  use_cases.py
backend/src/cyberdyne_backend/application/course_finder/: __init__.py  use_cases.py
backend/src/cyberdyne_backend/cli/: __init__.py  academy_backup.py  add_devops_fundamentals_to_ce_devops.py  add_fine_tuning_llms_to_computer_engineering.py  add_gpu_programming_to_computer_engineering.py  add_pytorch_basics_to_computer_engineering.py  add_react_basics_to_computer_engineering.py  add_selling_software_to_computer_engineering.py  add_startups_ai_to_computer_engineering.py  add_svelte_basics_to_computer_engineering.py  add_system_design_interview_to_computer_engineering.py  add_tensorflow_basics_to_computer_engineering.py  create_chemical_engineering_path.py  create_civil_engineering_path.py  create_computer_engineering_path.py  create_environmental_engineering_path.py  create_geospatial_engineering_path.py  create_life_sciences_paths.py  create_mechanical_engineering_paths.py  seed_academy.py  translate_academy.py
backend/src/cyberdyne_backend/infrastructure/: container.py  logging.py  redaction.py  settings.py
backend/tests/: conftest.py
backend/tests/integration/: test_academy_i18n.py  test_achievements_api.py  test_activity_api.py  test_agent_chat_api.py  test_analytics_api.py  test_bookmarks_api.py  test_certificate_pdf_api.py  test_certificate_verify_api.py  test_chat_attachments_api.py  test_chat_rate_limit.py  test_chat_stream_format.py  test_code_api.py  test_concepts_api.py  test_cors_preflight.py  test_course_certificates_api.py  test_course_demand_api.py  test_courses_api.py  test_courses_progress_api.py  test_feedback_api.py  test_learner_uploads_api.py  test_learning_admin_crud_api.py  test_learning_deadlines_api.py  test_learning_gating_api.py  test_learning_i18n_api.py  test_lesson_notes_api.py  test_notebook_ai_api.py  test_notebook_api.py  test_quiz_catalog_api.py  test_quiz_repository_fk.py  test_quizzes_api.py  test_quota_admin_api.py  test_quota_api.py  test_recommendations_api.py  test_scan_api.py  test_signing_key_api.py  test_skills_api.py  test_stripe_webhook_size_cap.py  test_uploads_api.py  test_uploads_roundtrip_api.py  test_wallet_access_api.py  (+3 more)
backend/tests/unit/: test_academy_backup.py  test_academy_course_translation.py  test_academy_locale_threading.py  test_academy_translation.py  test_academy_translation_jobs.py  test_access_use_cases.py  test_achievements.py  test_activity_stats.py  test_agent_chat.py  test_ai_chat.py  test_analytics_entities.py  test_analytics_use_cases.py  test_attachment_extractor.py  test_attachment_ingestor.py  test_auth_identity.py  test_auth_middleware.py  test_blog_entities.py  test_blog_use_cases.py  test_bookmarks_use_cases.py  test_cert_signer_selection.py  test_certificate_pdf.py  test_certificate_verify.py  test_code_use_cases.py  test_concepts.py  test_content_api.py  test_content_use_cases.py  test_course_categories.py  test_course_certificates.py  test_course_demand_use_cases.py  test_course_finder.py  test_courses_entities.py  test_courses_progress.py  test_courses_repository.py  test_courses_seed.py  test_courses_use_cases.py  test_cyberflies_client.py  test_dao_treasury.py  test_document_renderer.py  test_ed25519_signer.py  test_email_notifier_redaction.py  (+51 more)
(+1331 files in other folders)
