[project]
name = "cyberdyne-backend"
version = "0.1.0"
description = "Backend for the Cyberdyne SvelteKit frontend — hexagonal FastAPI service"
requires-python = ">=3.12"
authors = [{ name = "Cyberdyne Corp" }]
license = { text = "BSD-2-Clause" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.6.1",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    # Persistence — Phase 1 forward.
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.30",
    "reportlab>=4.5.1",
    # Ed25519 certificate signing (keypair — for external verifiers).
    "cryptography>=43.0.0",
    # Local RS256 access-token verification against CyberdyneAuth's JWKS.
    "pyjwt[crypto]>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "import-linter>=2.0",
    "respx>=0.21.0",
    "aiosqlite>=0.20.0",  # in-memory SQLAlchemy backend for unit/integration tests
]

[project.scripts]
cyberdyne-backend = "cyberdyne_backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberdyne_backend"]

# ── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default test run skips integration tests so CI stays offline. Use
# `just test-integration` to opt in.
addopts = "-m 'not integration'"
markers = [
    "unit: Unit tests (no I/O, no real HTTP, no DB)",
    "integration: Adapter-level tests that cross a process boundary",
]

# ── coverage ──────────────────────────────────────────────────────────
# Gate only the hexagonal core (domain + application) at 90% — adapters
# are exercised by integration tests instead, same shape as the rest of
# the Cyberdyne stack. The whole tree is still imported when tests run,
# but coverage only counts the layers we care about gating.
[tool.coverage.run]
source = [
    "src/cyberdyne_backend/domain",
    "src/cyberdyne_backend/application",
]
omit = ["**/__init__.py"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ── ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N806"]  # allow test function naming flexibility

# ── mypy (strict) ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["cyberdyne_backend"]
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# reportlab ships no type stubs.
[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true
